--- a/section1.tex
+++ b/section1.tex
@@ -446,6 +446,8 @@ The comprehensive experimental evaluation demonstrates VCS's superior performanc
 
 \subsection{CONCLUSION}
 
-We introduced VCS, a comprehensive evaluation metric for long-form video descriptions that addresses fundamental limitations of existing approaches. Through three core components—Global Alignment Score, Local Alignment Score, and Narrative Alignment Score—VCS provides robust evaluation of semantic alignment and chronological consistency. Our extensive experiments on synthetic datasets demonstrate VCS superior performance in corruption detection and cross-author consistency tasks, while VCS$_{\text{short}}$ achieves state-of-the-art human correlation results. This work establishes a foundation for reliable evaluation of video comprehension models and opens avenues for future research in automated video understanding assessment.
+In this thesis, we have conducted a systematic study on long-form video description evaluation metrics. First, to address the limitations of existing metrics in chronological assessment and content completeness detection, we have proposed a novel evaluation metric VCS by measuring semantic alignment, local content alignment, and narrative alignment between reference and generated descriptions. Second, we have constructed synthetic datasets from MPII Movie Description Dataset to systematically analyze the reliability of existing metrics through corruption detection and cross-author consistency evaluation. The corruption detection experiments have demonstrated that VCS consistently outperforms traditional metrics in distinguishing valid narrative variations from invalid corruptions across all transformation types. Moreover, VCS maintains exceptional robustness across different authorial styles while traditional metrics show substantial variability. The VATEX-EVAL experiments have shown that VCS$_{\text{short}}$ achieves state-of-the-art human correlation in multi-reference settings.
+
+Limitations. VCS is an embedding-based metric and relies on the performance of the NV-Embed-v2 model for semantic representation. More reliable evaluation scores can be obtained by leveraging better embedding models to extract superior semantic representations. Additionally, the Local Narrative Tolerance parameter requires domain-specific tuning to achieve optimal performance across different video description contexts.
 
 \end{document}
